# mlflow-credit-risk

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: exploration.ipynb
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/data/: __init__.py  features.py  ingest.py
src/models/: __init__.py  evaluate.py  registry.py  train.py
tests/: __init__.py  test_api.py  test_features.py
