[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mlflow-credit-risk"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.9.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "shap>=0.43.0",
    "optuna>=3.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
